# pyCoastal-

./: LICENSE  README.md  paper.bib  paper.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml  python-publish.yml
examples/: current.py  pollutant.py  wave2D.py  wave2D_irregular.py  waves2D.py
examples/configs/: current.yaml  pollutant.yaml  viscous_fluid.yaml  water_drop.yaml  waves2D.yaml  waves2D_irregular.yaml
examples/numerics/: viscous_fluid.py  water_drop.py
pyCoastal/: __init__.py  config.py  io.py  sediment_transport.py  structural.py  wave_tools.py
pyCoastal/numerics/: __init__.py  boundary.py  domain.py  grid.py  operators.py  scheme.py  solver.py  time_intg.py  wave2D.py
pyCoastal/physics/: __init__.py  navier_stokes.py  poisson.py  shallow_water.py  turbulence.py
pyCoastal/tools/: __init__.py  morphodynamics.py  sediment_transport.py  structural.py  wave.py
tests/: 2D_irr_turb.py
